--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 	   			<p class="intro-position">
 	   				<span>Full- Stack Web Developer</span>
-	   				<span>Begg. in Android</span> 
+	   				<span>Android Developer</span> 
 				   <span>Event Oragnizer</span>
 				</p>
 
@@ -102,7 +102,7 @@
 
    				<img src="images/Capture.PNG" alt="Profile Picture">
 
-   				<p class="lead">I am currently pursuing my B.Tech in CSE from JECRC UNIVERSITY, Jaipur. I am currently working as a Full Stack Web Developer and beggnier in Android as well. I have Oragnized multiple national as well as state events.I have been part of some major students organization like DSC(Google), Amazon Alexa Influencer(ASI) and many more. </p>
+   				<p class="lead">I am currently pursuing B.Tech in CSE from JECRC UNIVERSITY, Jaipur ,as a Full Stack Web Developer and Android Developer(Flutter) as well. I have oragnized various events at national as well as state level. Also I have been part of some major student organizations like DSC(Google), Amazon Alexa Influencer(ASI) and Alibaba Student Program. </p>
    			</div>   			
 
    		</div>   		
