--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	   			<p class="intro-position">
 	   				<span>Full- Stack Web Developer</span>
 	   				<span>Android Developer</span> 
-				   <span>Event Oragnizer</span>
+				   <span>Event Organizer</span>
 				</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -102,8 +102,11 @@
 
    				<img src="images/Capture.PNG" alt="Profile Picture">
 
-   				<p class="lead">I am currently pursuing B.Tech in CSE from JECRC UNIVERSITY, Jaipur ,as a Full Stack Web Developer and Android Developer(Flutter) as well. I have oragnized various events at national as well as state level. Also I have been part of some major student organizations like DSC(Google), Amazon Alexa Influencer(ASI) and Alibaba Student Program. </p>
-   			</div>   			
+   				<p class="lead">I am currently pursuing B.Tech in CSE from JECRC UNIVERSITY, Jaipur ,as a Full Stack Web Developer and Android Developer(Flutter). To work efficiently as well as grow with a prestigious organisation
+					where I can use my skills, expand my knowledge base and help team members in building the organisation.
+
+
+		</div>   			
 
    		</div>   		
    	</div> <!-- /section-intro -->
@@ -113,8 +116,8 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I have a good experience in technical as well a organizational and development.<br>I code in Python and do competitive programming. I have
-				also knowledge about footprinting networking and other topics of CEH.<br>I am one of the active member of multiple communities like DSC(Lead),ASI(Student Influencer), UC.Web(Student Ambassdar) and some local organization.<br></p>
+   			<p>I have a good experience in technical organizational as well as development.<br>I have organized various events at National as well as State level. Also I have been part of some major student organizations like DSC(Google), Amazon Alexa Influencer(ASI) and Alibaba Student Program. </p>
+   	 also knowledge about footprinting networking and other topics of CEH.</p>
 
    			<ul class="info-list">
    				<li>
