--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I have a good experience in technical organizational as well as development.<br>I have organized various events at National as well as State level. Also I have been part of some major student organizations like DSC(Google), Amazon Alexa Influencer(ASI) and Alibaba Student Program. </p>
-   	 also knowledge about footprinting networking and other topics of CEH.</p>
+   			<p>I have a good experience in technical organizational as well as development.<br>I spent about 2 years finessing Python and C/C++.<br>I have organized various events at National as well as State level. Also I have been part of some major student organizations like DSC(Google), Amazon Alexa Influencer(ASI) and Alibaba Student Program.<br>
+I also posses knowledge about footprinting networking.</p>
 
    			<ul class="info-list">
    				<li>
