--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">credentials</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Credentials</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
+						//<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 										
 					</ul>
 				</nav>    		
@@ -393,7 +393,7 @@ I also posses knowledge about footprinting networking.</p>
 
 	            	 <h3>Android</h3>
 
-		            <p class="desc">I can make Android apps with flutter and dart with voice interface in it.
+		            <p class="desc">I can make Android apps with Flutter X Firebase Cloud Firestore.
 	         		</p>
 	         		
 	         	</div> 	         	 
@@ -408,7 +408,7 @@ I also posses knowledge about footprinting networking.</p>
 
 	            	<h3>Web Development</h3>  
 
-		            <p class="desc">I can make a website fron sratch with both front end and back end.
+		            <p class="desc">I can make a website from scratch with Front and Back end.
 	         		</p>
 	            </div>	                          
 
@@ -422,7 +422,7 @@ I also posses knowledge about footprinting networking.</p>
 
 	            	<h3>Event Managment</h3>
 
-		            <p class="desc">I have organized multiple events and have been connected to multiple major communities. So it can helpful in event organization as well as Managment.
+		            <p class="desc">I have ample amount of experience in organizing as well as managing the events.
 	        			</p> 
 
 	            </div> 	            	               
