--- a/index.html
+++ b/index.html
@@ -443,12 +443,12 @@ I also posses knowledge about footprinting networking.</p>
    	<div class="row contact-info">
 
    		<center>
-   			<h5>Email Me At</h5>
+   			<h5>Email </h5>
 
    			<p>prateekkhandelwal68053@gmail.com			     
 			   </p>
 
-   		<h5>Call Me At</h5>
+   		<h5>Call</h5>
 
    			<p>
 			   	Mobile: (+91) 7895439553<br>
