--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Credentials</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						//<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
+						//<li><a class="smoothscroll"  href="#row contact-info" title="">Contact</a></li>	
 										
 					</ul>
 				</nav>    		
