FINAL UPDATE FOR LOGO

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ I also posses knowledge about footprinting networking.</p>
 		            <p class="desc">I have ample amount of experience in organizing as well as managing the events.
 	        			</p> 
 
-	            </div> 	            	               
+	        	</div> 	            	               
 
 			   </div> <!-- /service -->
 
@@ -437,26 +437,22 @@ I also posses knowledge about footprinting networking.</p>
 		
 	</section> <!-- /services -->	
 
-
 	
+	<section id="contact">	
+   		<div class="row contact-info">
+		
+			<center>
+				<div class="contactname"><h1>Contact</h1></div>
+   				<h5>Email </h5>
 
-   	<div class="row contact-info">
+   				<p>prateekkhandelwal68053@gmail.com</p>
 
-   		<center>
-   			<h5>Email </h5>
+   				<h5>Call</h5>
 
-   			<p>prateekkhandelwal68053@gmail.com			     
-			   </p>
-
-   		<h5>Call</h5>
-
-   			<p>
-			   	Mobile: (+91) 7895439553<br>
-			     				   </p>
-
-   		</div>
-		</center>	
-   	</div> <!-- /contact-info -->
+				   <p>Mobile: (+91) 7895439553<br></p>
+			</center>	
+	
+	   </div>
 		
 	</section> <!-- /contact -->
 
