--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="https://www.linkedin.com/in/prateek-khandelwal-9a1180172"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/prateek-01"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://github.com/pkkh2000"><i class="fa fa-github"></i></a></li>
          <li><a href="https://www.facebook.com/prateek.khandelwal.56/"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.instagram.com/prateek_khandelwal_/"><i class="fa fa-instagram"></i></a></li>
